--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, h1, h2, p, ul, li {
     body {
     font-family: 'Times New Roman', Times, serif, sans-serif,Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif,bold;
     line-height: 2.0;
-    color:yellow
+    color:darkblue
     }
     header {
     background-color: red;
@@ -68,11 +68,11 @@ body, h1, h2, p, ul, li {
     footer {
     text-align: center;
     padding: 1rem 0;
-    background-color: green;
+    background-color: grey;
     color: black;
     }
     .social-links a {
-    color: red;
+    color: green;
     text-decoration: none;
     margin: 0 10px;
     }
@@ -86,7 +86,7 @@ body, h1, h2, p, ul, li {
     }
     }
 body{
-    background-image:url("nitte.avif");
+    background-image:url("real.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
